# fizzbee

./: BUILD  README.md  WORKSPACE  fizz  fizz_script  main.go
docs/: fizzbee-quick-start-for-tlaplus-users.md  language_design_for_review.md
example1/: perf_model1.yaml
examples/comparisons/ewd426-token-ring/: TokenRing.fizz  TokenRing.json  fizz.yaml  perf_model.yaml
examples/comparisons/gossa-v1/: gossa.fizz  gossa.json
examples/tutorials/: BUILD.bazel
examples/tutorials/00-no-op/: Counter.fizz  Counter.json  fizz.yaml
examples/tutorials/01-atomic-counters/: Counter.fizz  Counter_ast.json
examples/tutorials/02-multiple-atomic-counters/: Counter.fizz  Counter_ast.json  Counter_ast.yaml  fizz.yaml
examples/tutorials/03-multiple-serial-counters/: Counter.fizz  Counter.json  Counter_ast.json
examples/tutorials/04-multiple-oneof-counters/: Counter.fizz
examples/tutorials/05-multiple-parallel-counters/: Counter.fizz
examples/tutorials/06-inc-dec-atomic-counters/: Counter.fizz
examples/tutorials/09-inc-dec-parallel-counters/: Counter.fizz
examples/tutorials/10-coins-to-dice-atomic-3sided/: ThreeSidedDie.fizz  ThreeSidedDie_ast.json  ThreeSidedDie_ast.yaml  fizz.yaml
examples/tutorials/10.1-coins-to-dice-atomic-6sided/: Die.fizz
examples/tutorials/11-coins-to-dice-atomic-3sided-return-value/: ThreeSidedDie.fizz
examples/tutorials/12-coins-to-dice-atomic-6sided-return-value/: SixSidedDie.fizz
examples/tutorials/13-any-stmt/: Counter.fizz  Counter_ast.json  Counter_ast.yaml
examples/tutorials/14-elements-counter-atomic/: Counter.fizz  Counter_ast.json  Counter_ast.yaml
examples/tutorials/15-elements-counter-serial/: Counter.fizz  Counter_ast.json  Counter_ast.yaml
examples/tutorials/16-elements-counter-parallel/: Counter.fizz  Counter_ast.json  Counter_ast.yaml
examples/tutorials/17-for-stmt-atomic/: ForLoop.fizz
examples/tutorials/18-for-stmt-serial/: ForLoop.fizz  ForLoop.json  ForLoop_ast.json  ForLoop_ast.yaml
examples/tutorials/19-for-stmt-serial-check-again/: ForLoop.fizz  ForLoop.json
examples/tutorials/20-for-stmt-parallel-check-again/: ForLoop.fizz
examples/tutorials/21-unfair-coin/: FairCoin.fizz  FairCoin_ast.json
examples/tutorials/22-while-stmt-atomic/: Counter.fizz
examples/tutorials/23-while-stmt-serial/: Counter.fizz
examples/tutorials/24-while-stmt-atomic/: FairCoin.fizz  FairCoin.json
examples/tutorials/25-break-continue/: Loop.fizz
examples/tutorials/26-unfair-coin-toss-while/: FairCoin.fizz  FairCoin_ast.json  FairCoin_ast.yaml
examples/tutorials/27-unfair-coin-toss-while-noreset/: FairCoin.fizz  FairCoin_ast.json  FairCoin_ast.yaml
examples/tutorials/28-unfair-coin-toss-while-return/: FairCoin.fizz  FairCoin.json
examples/tutorials/29-simple-function/: FlipCoin.fizz  FlipCoin_ast.json
examples/tutorials/30-unfair-coin-toss-method/: FairCoin.fizz  FairCoin.json  FairCoin_ast.json
examples/tutorials/31-fair-die-from-coin-toss-method/: FairDie.fizz  FairDie.json  FairDie_ast.json
examples/tutorials/32-fair-die-from-unfair-coin/: FairDie.fizz  FairDie_ast.json
examples/tutorials/34-simple-hour-clock/: HourClock.fizz  HourClock.json
examples/tutorials/37-unfair-coin-toss-labels/: FairCoin.fizz  FairCoin.json  fizz.yaml
examples/tutorials/41-strict-liveness/: Counter.fizz
examples/tutorials/43-simple-markov-chain/: MarkovChain.fizz
frontend/: app.js  package-lock.json  package.json
frontend/public/css/: style.css
frontend/public/js/: cm6.bundle.js
frontend/routes/: project.js  socket.js
frontend/views/: project.ejs
lib/: BUILD.bazel  queue.go  stack.go
modelchecker/: BUILD.bazel  checker.go  checker_test.go  clone.go  graph.go  graph_test.go  invariants.go  invariants_test.go  markovchain.go  markovchain_test.go  options.go  perf_checker.go  processor.go  processor_test.go  protopath.go  protopath_test.go  starlark.go  starlark_test.go  testconstants.go  thread.go  thread_test.go
parser/: BUILD.bazel  BuildAstVisitor.py  FizzLexer.g4  FizzLexer.interp  FizzLexer.py  FizzLexer.tokens  FizzParser.g4  FizzParser.interp  FizzParser.py  FizzParser.tokens  FizzParserListener.py  FizzParserVisitor.py  main.py
performance/: BUILD.bazel  fmt.py  main.py  markov_chain.py
proto/: BUILD.bazel  fizz_ast.proto  graph.proto  performance_model.proto  statespace_options.proto
