load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "modelchecker",
    srcs = [
        "checker.go",
        "processor.go",
        "starlark.go",
        "thread.go",
    ],
    importpath = "github.com/jayaprabhakar/fizzbee/modelchecker",
    visibility = ["//visibility:public"],
    deps = [
        "//lib",
        "//proto:ast",
        "@com_github_golang_glog//:glog",
        "@com_github_huandu_go_clone//:go-clone",
        "@net_starlark_go//starlark",
        "@net_starlark_go//syntax",
    ],
)

go_test(
    name = "modelchecker_test",
    srcs = [
        "checker_test.go",
        "starlark_test.go",
    ],
    embed = [":modelchecker"],
    deps = [
        "//proto:ast",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@net_starlark_go//starlark",
        "@net_starlark_go//syntax",
        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
    ],
)
