load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")

proto_library(
    name = "ast_proto",
    srcs = ["fizz_ast.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "ast_go_proto",
    importpath = "fizz/ast",
    proto = ":ast_proto",
    visibility = ["//visibility:public"],
)

py_proto_library(
    name = "ast_py_proto",
    srcs = ["fizz_ast.proto"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "ast",
    embed = [":ast_go_proto"],
    importpath = "fizz/ast",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "perf_proto",
    srcs = [
        "fizz_ast.proto",
        "performance_model.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "perf_go_proto",
    importpath = "fizz/perf",
    proto = ":perf_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "perf",
    embed = [":perf_go_proto"],
    importpath = "fizz/perf",
    visibility = ["//visibility:public"],
)
